# python-ml-chat-bot

./: README.md  makefile  pyproject.toml
app/: bot.py  dialog.py  main.py  model.py  profile.py  storage.py
data/: profile_1.txt  profile_2.txt  profile_3.txt  profile_4.txt
static/: index.css  index.html  index.js
tests/: test_bot.py
