[tool.poetry]
name = "python-ml-chat-bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = {version = "^2.1.0+cpu", source = "torch-source"}
transformers = "^4.34.1"
faker = "^19.11.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
cachetools = "^5.3.1"


[[tool.poetry.source]]
name = "torch-source"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
